# lattice-audit-protocol

./: CHANGELOG.md  CLAIMS.md  CLAIMS_TESTS_MAP.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SECURITY_REVIEW.md  STANDARDIZATION_NOTES.md  THREAT_MODEL.md  __init__.py  go.work  lap_cli.py  lap_conformance.py  lap_gateway.db  lap_schema_validate.py  lap_verify.py  lattice_audit_v1_7.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  go-verify.yml  release-artifacts.yml  tla_model_check.yml
demo/: Dockerfile.gateway  Dockerfile.tool  README.md  docker-compose.yml  run_demo.py
demo/agent/: Dockerfile  run.sh
demo/tool/: Dockerfile  tool_server.py
deploy/: PRODUCTION_GUIDE.md  README.md  docker-compose.production.yml  docker-compose.reverse-proxy.yml
deploy/cloud/: README.md
deploy/k8s/: Dockerfile.gateway  README.md
deploy/nginx/: nginx.conf
deploy/observability/: README.md  docker-compose.observability.yml  prometheus.yml
deploy/pkcs11/: README.md  pkcs11_signer.py  pkcs11_signer.sh  signer.service
deploy/scripts/: generate_self_signed_cert.sh
go/lapverify/: README.md  go.mod
lap_gateway/: __init__.py  adapters.py  attestations.py  audit_log.py  audit_pack.py  auth.py  counter_journal.py  crypto.py  dsse.py  errors.py  evidence_quality.py  http_tool.py  lockdown.py  metrics.py  ops_stats.py  pdp.py  ratelimit.py  receipts.py  replay_hotpath.py  runner.py  server.py  signing.py  tokens.py  transparency.py  witness.py
runbooks/: INCIDENT_RESPONSE.md  KEY_ROTATION.md  OUTAGE_PLAYBOOKS.md
scripts/: clean_tree.sh  dev_check.sh
spec/: BudgetInvariants.cfg  BudgetInvariants.tla  CANONICAL_JSON.md  ERROR_CODES.md  INTEROP.md  PROFILES.md  README.md  ReplayBindingInvariants.cfg  ReplayBindingInvariants.tla  STABLE_CORE.md  lap-core-v0.1.md
spec/golden_packs/: README.md
spec/profile_attestations/: gold_example.json  silver_example.json
spec/schemas/: attestation_statement.schema.json  audit_pack_manifest.schema.json  decision.schema.json  (+10 more)
tests/: test_adversarial_replay_and_binding.py  test_anchor_cli_failclosed.py  test_attestation_statement.py  test_audit_and_budgets.py  test_audit_pack_hash_authority.py  test_auth.py  test_auth_and_audit.py  test_canonical_json_edge_cases.py  test_canonical_json_v2_strict_nan.py  test_canonical_json_versions.py  test_counter_crash_safety.py  test_dsse_envelope.py  test_dual_auditor_consensus.py  test_external_signer_mode.py  test_gateway_security.py  test_key_registry_rotation.py  test_key_revocation_effective_time.py  test_lap_verify.py  test_lap_verify_json_output.py  test_lattice_audit.py  test_package_exports.py  test_pdp_http.py  test_profiles_and_mutation.py  test_regressions_post_pr010.py  test_replay_hotpath.py  test_reviewer_override.py  test_schema_validate.py  test_sessions.py  test_stats_auth_prod_default.py  test_storage_lockdown.py  test_transparency_anchors.py  test_transparency_http.py  test_transparency_privacy_modes.py
(+58 files in other folders)
